--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -165,7 +165,7 @@
                         // links icon
                         i {
                             color: $text-lime;
-                            font-size: .7em;
+                            font-size: .9em;
                             padding: .2em;
                             // icon label (pseudo)
                             &::after {
@@ -209,6 +209,7 @@
                             inset -5px 0px 5px #000a;
                         background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
                         opacity: 0.5;
+                        transition: .5s;
                     }
                     // end of project image box shadow
                     // image 
@@ -224,6 +225,9 @@
                     }
                     // end of image
                     &:hover {
+                        &::after {
+                            opacity: 0;
+                        }
                         transition: 0.5s ease;
 
                     }
@@ -266,6 +270,9 @@
                 // project item img hover state
                 &:hover {
                     &.project-item {
+                        &::after {
+                            opacity: 1;
+                        }
                         img {
                             transform: scale(1.1);
                         }
