--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,8 @@ $text-white-trans: #fffa;
 $text-white-trans-d: #ddda;
 $text-dark: #333;
 $text-black-trans: #000a;
-$text-light: #ddd;
+$text-light-d: #ddd;
+$text-light-d-trans: #ddda;
 $text-white-e: #eee;
 $text-white-d: #ddd;
 $text-lime: #bfee50;
