--- a/css/style2.css
+++ b/css/style2.css
@@ -25,8 +25,7 @@ hamburger
 .progress-bar {
   height: 4px;
   background: var(--redGradient);
-  width: 0%;
-  border-radius: 10px; }
+  width: 0%; }
 
 /* end of progress bar*/
 /*bootstrap scrollbar*/
@@ -245,13 +244,23 @@ hamburger
   backdrop-filter: blur(5px);
   border-radius: 10px;
   border: none;
-  box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a;
   position: relative;
   z-index: 30;
   transition: .2s linear; }
   @media (min-width: 1024px) {
     #skills .skills-top {
       width: 60%; } }
+  #skills .skills-top::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 3px 3px 4px #ddda, inset -3px -3px 4px #000a;
+    border-radius: 10px;
+    border: none;
+    outline: none; }
   #skills .skills-top p {
     color: #ddd;
     font-size: .9em;
@@ -262,6 +271,8 @@ hamburger
     @media (min-width: 768px) {
       #skills .skills-top p {
         font-size: 1em; } }
+    #skills .skills-top p span {
+      color: #ddda; }
   #skills .skills-top::after {
     content: '';
     position: absolute;
@@ -480,6 +491,7 @@ hamburger
             width: 100%; }
         #skills .dropdown .dropdown-content .skills-bottom .skills-item h2 {
           font-size: 1.4em;
+          font-weight: 600;
           color: #fff;
           margin-bottom: 10px;
           text-transform: capitalize;
