--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -211,7 +211,7 @@
             background-position: center;
             background-attachment: fixed;
             position: relative;
-            padding-bottom: 10em;
+            padding-bottom: 15vh;
             // dropdown content overlay
             &::before {
                 content: "";
