--- a/css/style2.css
+++ b/css/style2.css
@@ -320,14 +320,16 @@ hamburger
       width: 100%;
       height: 100%;
       border-radius: 10px;
+      border: none;
+      outline: none;
       transition: .3s; }
     #skills .dropdown .dropbtn::before {
-      background: linear-gradient(0deg, #dc134c, #581212);
-      box-shadow: inset 3px 3px 3px #000a, inset -3px -3px 3px #fffa; }
-    #skills .dropdown .dropbtn::after {
       background: linear-gradient(0deg, #581212, #dc134c);
+      box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a; }
+    #skills .dropdown .dropbtn::after {
+      background: linear-gradient(0deg, #dc134c, #581212);
       opacity: 0;
-      box-shadow: 0px 0px 10px #000a, inset 3px 3px 3px #fffa, inset -3px -3px 3px #000a; }
+      box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px #ddda; }
     #skills .dropdown .dropbtn:hover {
       transform: scale(0.97); }
       #skills .dropdown .dropbtn:hover::before {
