--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -153,22 +153,20 @@
                 width: 100%;
                 height: 100%;
                 border-radius: 10px;
+                border: none;
+                outline: none;
                 transition: .3s;
             }
 
             &::before {
-                // background: linear-gradient(0deg, #dc134c, #333);
-                background: linear-gradient(0deg, #dc134c, #581212);
-                box-shadow: inset 3px 3px 3px #000a,
-                            inset -3px -3px 3px #fffa;
+                background: linear-gradient(0deg, #581212, #dc134c);
+                box-shadow: $box-light-top-sm;
             }
 
             &::after {
-                background: linear-gradient(0deg, #581212, #dc134c);
+                background: linear-gradient(0deg, #dc134c, #581212);
                 opacity: 0;
-                box-shadow: 0px 0px 10px #000a,
-                    inset 3px 3px 3px #fffa,
-                    inset -3px -3px 3px #000a;
+                box-shadow: $box-dark-top-sm;
             }
 
             // button box shadow states
