--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -178,7 +178,7 @@
                                 transition: .3s;
                                 opacity: 0;
                                 margin-left: .5em;
-                                transition: .5s;
+                                transition: .3s ease;
                             }
 
                             // end of icon label (pseudo)
