--- a/css/style.css
+++ b/css/style.css
@@ -1806,7 +1806,7 @@ body {
       opacity: 1; }
   .about .col-left {
     width: 100%;
-    height: 50vh;
+    height: 360px;
     margin-top: 0;
     z-index: 20;
     transform-style: preserve-3d; }
