--- a/scss/style.scss
+++ b/scss/style.scss
@@ -779,7 +779,7 @@ body {
         // justify-content: center;
         // align-items: center;
         width: 100%;
-        height: 50vh;
+        height: 360px;
         margin-top: 0;
         z-index: 20;
         transform-style: preserve-3d;
