--- a/css/style.css
+++ b/css/style.css
@@ -557,9 +557,7 @@ hamburger
       transform: preserve-3d;
       border: none;
       outline: none;
-      background: none;
-      backdrop-filter: blur(0.1em);
-      -webkit-backdrop-filter: blur(0.1em); }
+      transform: scale(0.85); }
       @media (min-width: 768px) {
         #contact .contact .contact-items .contact-item {
           width: 30%; } }
@@ -573,7 +571,8 @@ hamburger
         border-radius: 10px;
         transition: .5s ease;
         transform: preserve-3d;
-        box-shadow: inset 3px 3px 4px #000a, inset -3px -3px 4px #ddda; }
+        background: #000a;
+        box-shadow: inset 3px 3px 4px #ffffff50, inset -3px -3px 4px #ffffff50; }
       #contact .contact .contact-items .contact-item::after {
         position: absolute;
         content: '';
@@ -589,7 +588,7 @@ hamburger
         transition: .5s ease; }
       #contact .contact .contact-items .contact-item:hover {
         transform: scale(1);
-        transition: .5s ease;
+        transition: .4s ease;
         transform: preserve-3d; }
         #contact .contact .contact-items .contact-item:hover::before {
           opacity: 0; }
