--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,6 +60,7 @@ body {
             }
             // corner logo
             .brand {
+                transition: 1s;
                 h1 {
                     font-size: 1.3em;
                     @media (min-width: 768px) {
