--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,7 +60,7 @@ body {
             }
             // corner logo
             .brand {
-                transition: 1s;
+                transition: 1s ease;
                 opacity: 0;
                 h1 {
                     font-size: 1.3em;
