contact item hover timing

--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,7 @@ hamburger
         margin: 0 auto; } }
     #contact .contact .contact-items .contact-item {
       transform: scale(0.95);
+      transition: 1s ease;
       width: 85%;
       /* height: auto; */
       text-align: center;
@@ -551,13 +552,13 @@ hamburger
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      transition: 1s ease;
       cursor: pointer;
       position: relative;
       transform: preserve-3d;
       border: none;
       outline: none;
-      transform: scale(0.85); }
+      transform: scale(0.85);
+      transition: .5s ease; }
       @media (min-width: 768px) {
         #contact .contact .contact-items .contact-item {
           width: 30%; } }
@@ -588,7 +589,6 @@ hamburger
         transition: .5s ease; }
       #contact .contact .contact-items .contact-item:hover {
         transform: scale(1);
-        transition: .4s ease;
         transform: preserve-3d; }
         #contact .contact .contact-items .contact-item:hover::before {
           opacity: 0; }
@@ -625,14 +625,15 @@ hamburger
           background: #f4f4f4;
           z-index: -1;
           border-radius: 10px;
-          transition: .3s ease; }
+          transition: .5s ease; }
         #contact .contact .contact-items .contact-item h1::before {
           box-shadow: inset 3px 3px 4px #000a, inset -3px -3px 4px #ddda; }
         #contact .contact .contact-items .contact-item h1::after {
           opacity: 0;
           background: #f4f4f4;
           z-index: -1;
-          box-shadow: inset 3px 3px 4px #ddda, inset -3px -3px 4px #000a; }
+          box-shadow: inset 3px 3px 4px #ddda, inset -3px -3px 4px #000a;
+          transition: .5s ease; }
       #contact .contact .contact-items .contact-item .icon {
         margin: 5px auto 10px auto;
         padding: .3em .7em;
@@ -660,7 +661,7 @@ hamburger
           background: #f4f4f4;
           border-radius: 50%;
           box-shadow: inset 3px 3px 4px #000a, inset -3px -3px 4px #ddda;
-          transition: 1s ease;
+          transition: .5s ease;
           transform: preserve-3d; }
         #contact .contact .contact-items .contact-item .icon::after {
           position: absolute;
@@ -674,7 +675,7 @@ hamburger
           background: #f4f4f4;
           border-radius: 50%;
           box-shadow: inset 3px 3px 4px #ddda, inset -3px -3px 4px #000a;
-          transition: 1s ease;
+          transition: .5s ease;
           transform: preserve-3d; }
         #contact .contact .contact-items .contact-item .icon img {
           transition: 1s ease;
