--- a/css/style.css
+++ b/css/style.css
@@ -345,11 +345,7 @@ hamburger
     z-index: 1;
     justify-content: center;
     align-items: center;
-    background-image: url("../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background: #29323c;
     position: relative;
     padding-bottom: 15vh; }
     #skills .dropdown .dropdown-content.show {
@@ -360,8 +356,7 @@ hamburger
       left: 0;
       top: 0;
       height: 100%;
-      width: 100%;
-      background: #000a; }
+      width: 100%; }
     #skills .dropdown .dropdown-content .skills-bottom {
       display: flex;
       align-items: center;
