--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -8,6 +8,7 @@
         justify-content: flex-start;
         text-align: center;
         width: 100vw;
+        padding-bottom: 30vh;
         margin: 0 auto;
         // padding-bottom: 1em;
         background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
@@ -203,7 +204,11 @@
             z-index: 1;
             justify-content: center;
             align-items: center;
-            background: $overlay-blue-dark;
+            background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
             position: relative;
             padding-bottom: 15vh;
             // dropdown content overlay
@@ -214,7 +219,7 @@
                 top: 0;
                 height: 100%;
                 width: 100%;
-                // background: rgba(0, 0, 0, 0.356);
+                background: rgba(0, 0, 0, 0.556);
             }
             // end of dropdown content overlay
             // skills items container
