--- a/css/style.css
+++ b/css/style.css
@@ -346,11 +346,7 @@ hamburger
     z-index: 1;
     justify-content: center;
     align-items: center;
-    background-image: url("../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background: #485563;
     position: relative;
     padding-bottom: 15vh; }
     #skills .dropdown .dropdown-content.show {
@@ -362,7 +358,7 @@ hamburger
       top: 0;
       height: 100%;
       width: 100%;
-      background: rgba(0, 0, 0, 0.556); }
+      background: rgba(0, 0, 0, 0.756); }
     #skills .dropdown .dropdown-content .skills-bottom {
       display: flex;
       align-items: center;
