--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -204,11 +204,7 @@
             z-index: 1;
             justify-content: center;
             align-items: center;
-            background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
+            background: $overlay-blue-light;
             position: relative;
             padding-bottom: 15vh;
             // dropdown content overlay
@@ -219,7 +215,7 @@
                 top: 0;
                 height: 100%;
                 width: 100%;
-                background: rgba(0, 0, 0, 0.556);
+                background: rgba(0, 0, 0, 0.756);
             }
             // end of dropdown content overlay
             // skills items container
