--- a/css/style.css
+++ b/css/style.css
@@ -129,22 +129,23 @@ hamburger
     border-radius: 50%;
     border: none;
     outline: none;
-    transition: .5s; }
+    transition: .5s ease; }
   #header .hamburger.hamburger::after {
     opacity: 1;
-    box-shadow: inset 3px 3px 5px #ddd, inset -3px -3px 5px #000; }
+    box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 2px #000a; }
   #header .hamburger.hamburger:before {
     border: 2px solid #ddda;
+    opacity: 0;
     animation: ham-pulse 2s ease infinite; }
 
 @keyframes ham-pulse {
   50% {
-    border-color: #fff; }
+    opacity: 1; }
   100% {
     opacity: 0;
-    transform: scale(1.2); } }
+    transform: scale(1.18); } }
   #header .hamburger:hover::before, #header .hamburger:focus::before {
-    opacity: 0; }
+    animation: ham-pulse 5s ease infinite; }
   #header .hamburger:hover::after, #header .hamburger:focus::after {
     opacity: .6; }
   #header .hamburger:active {
