--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ hamburger
   .top-link:hover {
     animation: none; }
     .top-link:hover i {
-      transform: translateY(-0.2em);
+      transform: scale(0.97);
       transition: .2s; }
 
 #skills .skills {
@@ -921,7 +921,9 @@ hamburger
         width: 100%;
         height: 100%;
         overflow: hidden;
-        position: relative; }
+        position: relative;
+        isolation: isolate;
+        overflow: hidden; }
         #projects .projects .all-projects .project-item .project-img::after {
           content: "";
           position: absolute;
@@ -931,8 +933,9 @@ hamburger
           width: 100%;
           box-shadow: 0 0 5px #000a, inset 5px 5px 5px #ddda, inset -5px 0px 5px #000a;
           background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
-          opacity: 0.5;
-          transition: .5s; }
+          opacity: 0;
+          transition: .5s;
+          z-index: 3; }
         #projects .projects .all-projects .project-item .project-img img {
           height: 100%;
           width: 100%;
@@ -940,7 +943,39 @@ hamburger
           border-radius: 0px;
           border-top-left-radius: 5px;
           border-top-right-radius: 5px;
-          transition: 0.5s ease; }
+          transition: 0.5s ease;
+          z-index: 1;
+          overflow: hidden; }
+        #projects .projects .all-projects .project-item .project-img .project-img-desc {
+          z-index: 2;
+          position: absolute;
+          display: grid;
+          place-items: center;
+          height: 100%;
+          width: 100%;
+          top: 0;
+          left: 0;
+          color: #fff;
+          border: none;
+          outline: none;
+          overflow: hidden;
+          border-radius: 0px;
+          border-top-left-radius: 5px;
+          border-top-right-radius: 5px;
+          font-size: 1.4em;
+          opacity: .1;
+          background-color: #29323c;
+          transition: .5s ease; }
+          #projects .projects .all-projects .project-item .project-img .project-img-desc ul {
+            list-style: none; }
+            #projects .projects .all-projects .project-item .project-img .project-img-desc ul li {
+              padding: .5em 0;
+              text-transform: capitalize;
+              transform: translateX(-2em);
+              opacity: 0; }
+          @media (max-width: 768px) {
+            #projects .projects .all-projects .project-item .project-img .project-img-desc {
+              font-size: 1em; } }
         #projects .projects .all-projects .project-item .project-img:hover {
           transition: 0.5s ease; }
           #projects .projects .all-projects .project-item .project-img:hover::after {
@@ -972,7 +1007,13 @@ hamburger
       #projects .projects .all-projects .project-item:hover.project-item .project-img img {
         transform: scale(1.1); }
       #projects .projects .all-projects .project-item:hover.project-item .project-img::after {
-        opacity: .2; }
+        opacity: 0; }
+      #projects .projects .all-projects .project-item:hover.project-item .project-img .project-img-desc {
+        opacity: 1; }
+        #projects .projects .all-projects .project-item:hover.project-item .project-img .project-img-desc ul li {
+          transition: .3s;
+          opacity: 1;
+          transform: translateX(0); }
       #projects .projects .all-projects .project-item:hover.project-item .project-tile a i {
         transform: scale(1.15) translateX(0.5em); }
         #projects .projects .all-projects .project-item:hover.project-item .project-tile a i::after {
