--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -212,6 +212,8 @@
                     height: 100%;
                     overflow: hidden;
                     position: relative;
+                    isolation: isolate;
+                    overflow: hidden;
                     // project image box shadow
                     &::after {
                         content: "";
@@ -224,8 +226,9 @@
                             inset 5px 5px 5px #ddda,
                             inset -5px 0px 5px #000a;
                         background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
-                        opacity: 0.5;
+                        opacity: 0;
                         transition: .5s;
+                        z-index: 3;
                     }
                     // end of project image box shadow
                     // image 
@@ -237,7 +240,44 @@
                         border-top-left-radius: 5px;
                         border-top-right-radius: 5px;
                         transition: 0.5s ease;
+                        z-index: 1;
+                        overflow: hidden;
 
+
+                    }
+                    .project-img-desc {
+                        z-index: 2;
+                        position: absolute;
+                        display: grid;
+                        place-items: center;
+                        height: 100%;
+                        width: 100%;
+                        top: 0;
+                        left: 0;
+                        color: #fff;
+                        border: none;
+                        outline: none;
+                        overflow: hidden;
+                        border-radius: 0px;
+                        border-top-left-radius: 5px;
+                        border-top-right-radius: 5px;
+                        font-size: 1.4em;
+                        opacity: .1;
+                        background-color:$overlay-blue-dark;
+                        transition: .5s ease;
+                        ul {
+                            list-style: none;
+
+                            li {
+                                padding: .5em 0;
+                                text-transform: capitalize;
+                                transform: translateX(-2em);
+                                opacity: 0;
+                            }
+                        }
+                        @media (max-width: 768px) {
+                            font-size: 1em;
+                        }
                     }
                     // end of image
                     &:hover {
@@ -245,7 +285,6 @@
                             opacity: 0;
                         }
                         transition: 0.5s ease;
-
                     }
                     @media (min-width: 768px){
                         height: 100%;
@@ -296,7 +335,18 @@
                             }
 
                             &::after {
-                                opacity: .2;
+                                opacity: 0;
+                            }
+                            .project-img-desc {
+                                opacity: 1;
+
+                                ul {
+                                    li {
+                                        transition: .3s;
+                                        opacity: 1;
+                                        transform: translateX(0);
+                                    }
+                                }
                             }
                         }
 
