--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,6 +4,7 @@ $font-ubuntu: 'Ubuntu',sans-serif;
 // text colors 
 $text-black: #000;
 $text-white: #fff;
+$text-light: #fff;
 $text-white-trans: #fffa;
 $text-white-trans-d: #ddda;
 $text-dark: #333;
