--- a/css/style.css
+++ b/css/style.css
@@ -506,22 +506,13 @@ hamburger
 
 #contact .contact {
   flex-direction: column;
+  justify-content: start;
   width: 100%;
   margin: 0 auto;
   padding-bottom: 30px;
-  background: #29323c;
+  background: #fff;
   position: relative;
   transform-style: preserve-3d; }
-  #contact .contact::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    background-color: #000a;
-    opacity: 0.4;
-    overflow: hidden; }
   #contact .contact .contact-header {
     width: 100%;
     height: auto;
@@ -536,11 +527,9 @@ hamburger
         display: flex;
         flex-direction: flex;
         flex-wrap: nowrap;
-        padding: 0;
+        padding: 0 5vw;
         margin: 0 auto; } }
     #contact .contact .contact-items .contact-item {
-      transform: scale(0.95);
-      transition: 1s ease;
       width: 85%;
       /* height: auto; */
       text-align: center;
@@ -556,8 +545,8 @@ hamburger
       transform: preserve-3d;
       border: none;
       outline: none;
-      transform: scale(0.85);
-      transition: .8s ease; }
+      transform: scale(0.9);
+      transition: .5s ease; }
       @media (min-width: 768px) {
         #contact .contact .contact-items .contact-item {
           width: 30%; } }
@@ -571,8 +560,9 @@ hamburger
         border-radius: 10px;
         transition: .5s ease;
         transform: preserve-3d;
-        background: #000a;
-        box-shadow: inset 3px 3px 4px #ffffff50, inset -3px -3px 4px #ffffff50; }
+        background: #29323c;
+        z-index: -1;
+        box-shadow: inset 3px 3px 4px #ffffff50, inset -3px -3px 4px #ffffff50, 10px 10px 5px rgba(0, 0, 0, 0.4); }
       #contact .contact .contact-items .contact-item::after {
         position: absolute;
         content: '';
@@ -581,7 +571,7 @@ hamburger
         width: 100%;
         height: 100%;
         background-color: #485563;
-        box-shadow: inset 3px 3px 4px #ddda, inset -3px -3px 4px #000a;
+        box-shadow: inset 3px 3px 4px #fffa, inset -3px -3px 4px #000a, 5px 15px 10px rgba(0, 0, 0, 0.3);
         border-radius: 10px;
         z-index: -2;
         opacity: 0;
