--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -2,25 +2,14 @@
 #contact {
     .contact {
         flex-direction: column;
+        justify-content: start;
         width: 100%;
         margin: 0 auto;
         padding-bottom: 30px;
-        background: $overlay-blue-dark;
+        // background: $overlay-blue-dark;
+        background: $background-light;
         position: relative;
         transform-style: preserve-3d;
-        // contact section overlay
-        &::before {
-            content: "";
-            position: absolute;
-            left: 0;
-            top: 0;
-            height: 100%;
-            width: 100%;
-            background-color: #000a;
-            opacity: 0.4;
-            overflow: hidden;
-        }
-        // end of contact section overlay
         // section-title
         .contact-header {
             width: 100%;
@@ -38,13 +27,11 @@
                 display: flex;
                 flex-direction: flex;
                 flex-wrap: nowrap;
-                padding: 0;
+                padding: 0 5vw;
                 margin: 0 auto;
             }
             // contact-item
             .contact-item {
-                transform: scale(.95);
-                transition: 1s ease;
                 // tablet to desktop
             @media (min-width: 768px){
                 width: 30%;
@@ -66,8 +53,8 @@
                 transform: preserve-3d;
                 border: none;
                 outline: none;
-                transform: scale(.85);
-                transition: .8s ease;
+                transform: scale(.9);
+                transition: .5s ease;
                 // item box shadows
                 &::before {
                     position: absolute;
@@ -79,10 +66,12 @@
                     border-radius: 10px;
                     transition: .5s ease;
                     transform: preserve-3d;
-                    background: #000a;
+                    background: $overlay-blue-dark;
+                    z-index: -1;
                     // box-shadow: $box-dark-top-sm;
                     box-shadow: inset 3px 3px 4px #ffffff50,
-                                inset -3px -3px 4px #ffffff50;
+                                inset -3px -3px 4px #ffffff50,
+                                10px 10px 5px rgba(0, 0, 0, 0.400);
                 }
                 &::after {
                     position: absolute;
@@ -92,7 +81,9 @@
                     width: 100%;
                     height: 100%;
                     background-color: $overlay-blue-light;
-                    box-shadow: $box-light-top-md;
+                    box-shadow: inset 3px 3px 4px #fffa,
+                                inset -3px -3px 4px #000a,
+                                        5px 15px 10px rgba(0, 0, 0, 0.300);
                     border-radius: 10px;
                     z-index: -2;
                     opacity: 0;
