--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -17,6 +17,7 @@ $text-lime: #bfee50;
 
 // span and border
 $span-crimson: #dc143c;
+$span-brand: #f72751;
 $span-violet: violet;
 $span-blue: #0000ff;
 $span-crimson-dark: #dc143c8c;
