--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,7 +63,7 @@ body {
                 transition: 1s ease;
                 opacity: 0;
                 h1 {
-                    font-size: 1.3em;
+                    font-size: 1.2em;
                     @media (min-width: 768px) {
                         font-size: 1.5em;
                     }
@@ -71,6 +71,11 @@ body {
                     color: #fff;
                     font-family: 'Gruppo', cursive;
                     text-shadow: 0 0 10px $text-shadow-red;
+                    
+                    span {
+                        color: $span-brand;
+                        // font-size: 1em;
+                    }
                 }
             }
             // corner logo
